tambah gambar dll

--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="big_title">Welcome to My Site</div>
         <div class="login_box">
             <form id="form_login"action="action_page.php">
                 <h2 class="title">Login</h2>
