--- a/login.html
+++ b/login.html
@@ -25,6 +25,9 @@
                     <p>
                         <button type="submit">Submit</button>
                     </p>
+                    <p class="exception">
+                        Don't have an account? <a href="">Click here</a>
+                    </p>
                 </tr>
             </form>
         </div>
