--- a/login.html
+++ b/login.html
@@ -13,22 +13,26 @@
         <div class="login_box">
             <form id="form_login"action="action_page.php">
                 <h2 class="title">Login</h2>
-                <tr>
-                    <p>
-                        <label for="username"><b>Username</b></label>
-                        <input type="text" placeholder="Enter Username" name="username" required>
-                    </p>
-                    <p>
-                        <label for="password"><b>Password</b></label>
-                        <input type="password" name="password" placeholder="Enter Password">
-                    </p>
-                    <p>
-                        <button type="submit">Submit</button>
-                    </p>
-                    <p class="exception">
-                        Don't have an account? <a href="">Click here</a>
-                    </p>
-                </tr>
+                <table>
+                    <tr>
+                        <p>
+                            <label for="username"><b>Username</b></label>
+                            <input type="text" placeholder="Enter Username" name="username" required>
+                        </p>
+                    </tr>
+                    <tr>
+                        <p>
+                            <label for="password"><b>Password</b></label>
+                            <input type="password" name="password" placeholder="Enter Password">
+                        </p>
+                        <p>
+                            <button type="submit">Login</button>
+                        </p>
+                        <p class="exception">
+                            Don't have an account? <a href="register.html">Click here</a>
+                        </p>
+                    </tr>
+                    </table>
             </form>
         </div>
     </div>
