mulai membuat landing page

--- a/landing_page.html
+++ b/landing_page.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#profile" class="nav-link">Profile Lab</a>
-        
         <a href="#photo" class="nav-link">Photo</a>
+        <a href="#matkul" class="nav-link">Mata Kuliah</a> 
+        <a href="#profile" class="nav-link">Profile Lab</a>
     </div>
     <div class="container">
         
