finishing login-register

--- a/login.html
+++ b/login.html
@@ -14,24 +14,32 @@
             <form id="form_login"action="action_page.php">
                 <h2 class="title">Login</h2>
                 <table>
-                    <tr>
-                        <p>
-                            <label for="username"><b>Username</b></label>
-                            <input type="text" placeholder="Enter Username" name="username" required>
-                        </p>
-                    </tr>
-                    <tr>
-                        <p>
-                            <label for="password"><b>Password</b></label>
-                            <input type="password" name="password" placeholder="Enter Password">
-                        </p>
-                        <p>
-                            <button type="submit">Login</button>
-                        </p>
-                        <p class="exception">
-                            Don't have an account? <a href="register.html">Click here</a>
-                        </p>
-                    </tr>
+                        <tr>
+                                <p>
+                                    <div class="left-tab">
+                                        <label  for="username"><b>Username</b></label>
+                                    </div>
+                                    <div class="right-tab">
+                                        <input type="text" placeholder="Enter Username" name="username" required>
+                                    </div>
+                                </p>
+                            </tr>
+                            <tr>
+                                <p>
+                                    <div class="left-tab">
+                                        <label  for="password"><b>Password</b></label>
+                                    </div>
+                                    <div class="right-tab">
+                                        <input type="password" name="password" placeholder="Enter Password">
+                                    </div>
+                                </p>
+                                <p>
+                                    <button type="submit">Register</button>
+                                </p>
+                                <p class="exception">
+                                    Already have an account? <a href="login.html">Click here</a>
+                                </p>
+                            </tr>
                     </table>
             </form>
         </div>
