--- a/register.html
+++ b/register.html
@@ -16,14 +16,22 @@
                 <table>
                     <tr>
                         <p>
-                            <label for="username"><b>Username</b></label>
-                            <input type="text" placeholder="Enter Username" name="username" required>
+                            <div class="left-tab">
+                                <label  for="username"><b>Username</b></label>
+                            </div>
+                            <div class="right-tab">
+                                <input type="text" placeholder="Enter Username" name="username" required>
+                            </div>
                         </p>
                     </tr>
                     <tr>
                         <p>
-                            <label for="password"><b>Password</b></label>
-                            <input type="password" name="password" placeholder="Enter Password">
+                            <div class="left-tab">
+                                <label  for="password"><b>Password</b></label>
+                            </div>
+                            <div class="right-tab">
+                                <input type="password" name="password" placeholder="Enter Password">
+                            </div>
                         </p>
                         <p>
                             <button type="submit">Register</button>
