finishing landing page

--- a/landing_page.html
+++ b/landing_page.html
@@ -8,13 +8,36 @@
     <link rel="stylesheet" href="style_landing_page.css">
 </head>
 <body>
-    <div class="navbar">
-        <a href="#photo" class="nav-link">Photo</a>
-        <a href="#matkul" class="nav-link">Mata Kuliah</a> 
-        <a href="#profile" class="nav-link">Profile Lab</a>
-    </div>
     <div class="container">
-        
+        <div class="header">
+            <img id="header-img" src="ASET-02.png" alt="logo-AJK">
+            <div class="navbar">
+                <a href="#photo" class="nav-link">Photo</a>
+                <a href="#matkul" class="nav-link">Mata Kuliah</a> 
+                <a href="#profile" class="nav-link">Profile Lab</a>
+            </div>
+        </div>
+        <main id="main-doc">
+            <section class="main-section" id="profile">
+                <header>Profile Laboratorium</header><br>
+                <p class="text">
+                    Sebelum kita lihat Laboratorium Arsitektur dan Jaringan Komputer, mari kita cari tahu apa itu Arsitektur dan Jaringan Komputer. Arsitektur dan Jaringan Komputer adalah salah satu bidang
+                    minat di Informatika ITS yang menawarkan bidang keahlian dimana
+                    akan ditekankan pada Kemampuan lulusan dalam membangun
+                    berbagai macam arsitektur jaringan sesuai standar teknologi terkini
+                    dan menerapkan keamanan jaringan.<br><br>
+                </p>
+                <p class="text">
+                    Dan di Departemen Informatika Institut Teknologi Sepuluh Nopember memiliki sebuah Laboratorium yang terfokus untuk bidang minat ini. Dimana Laboratorium itu dinamakan sesuai dengan minatnya yaitu Laboratorium Arsitektur dan Jaringan Komputer. Laboratorium ini terletak di ruang IF-307 yang dimana ruang itu berada di lantai 3 Departemen Informatika ITS.<br><br>
+                </p>
+                <p class="text">
+                    Setiap laboratorium di Departemen Informatika mempunyai seorang kepala laboratorium yang menjadi orang yang bertanggung jawab terhadap laboratorium itu. Dan di Laboratorium Arsitektur dan Jaringan Komputer ini dikepalai oleh Bapak Ir. Muchammad Husni, M.Kom. Dimana Beliau juga merupakan salah satu dosen dari mata kuliah rumpun Arsitektur dan Jaringan Komputer.<br><br>
+                </p>
+                <p class="text">
+                    Laboratorium Arsitektur dan Jaringan Komputer memiliki sekitar 17 sampai 18 admin aktif. Ada beberapa hal unik terkait dengan Laboratorium Arsitektur dan Jaringan Komputer, diantaranya laboratorium ini selalu berusaha untuk dibuka selama 24 jam, karena ya seperti yang kita tahu banyak anak-anak Departemen Informatika yang bekerja di waktu malam. Lalu
+                </p>
+            </section>
+        </main>
     </div>
 </body>
 </html>
