--- a/landing_page.html
+++ b/landing_page.html
@@ -12,14 +12,14 @@
         <div class="header">
             <img id="header-img" src="ASET-02.png" alt="logo-AJK">
             <div class="navbar">
-                <a href="#photo" class="nav-link">Photo</a>
+                <a href="#photo" class="nav-link">Gallery</a>
                 <a href="#matkul" class="nav-link">Mata Kuliah</a> 
                 <a href="#profile" class="nav-link">Profile Lab</a>
             </div>
         </div>
         <main id="main-doc">
-            <section class="main-section" id="profile">
-                <header>Profile Laboratorium</header><br>
+            <section class="main-section">
+                <header id="profile">Profile Laboratorium</header><br>
                 <p class="text">
                     Sebelum kita lihat Laboratorium Arsitektur dan Jaringan Komputer, mari kita cari tahu apa itu Arsitektur dan Jaringan Komputer. Arsitektur dan Jaringan Komputer adalah salah satu bidang
                     minat di Informatika ITS yang menawarkan bidang keahlian dimana
@@ -34,7 +34,14 @@
                     Setiap laboratorium di Departemen Informatika mempunyai seorang kepala laboratorium yang menjadi orang yang bertanggung jawab terhadap laboratorium itu. Dan di Laboratorium Arsitektur dan Jaringan Komputer ini dikepalai oleh Bapak Ir. Muchammad Husni, M.Kom. Dimana Beliau juga merupakan salah satu dosen dari mata kuliah rumpun Arsitektur dan Jaringan Komputer.<br><br>
                 </p>
                 <p class="text">
-                    Laboratorium Arsitektur dan Jaringan Komputer memiliki sekitar 17 sampai 18 admin aktif. Ada beberapa hal unik terkait dengan Laboratorium Arsitektur dan Jaringan Komputer, diantaranya laboratorium ini selalu berusaha untuk dibuka selama 24 jam, karena ya seperti yang kita tahu banyak anak-anak Departemen Informatika yang bekerja di waktu malam. Lalu
+                    Laboratorium Arsitektur dan Jaringan Komputer memiliki sekitar 17 sampai 18 admin aktif. Ada beberapa hal unik terkait dengan Laboratorium Arsitektur dan Jaringan Komputer, diantaranya laboratorium ini selalu berusaha untuk dibuka selama 24 jam, karena ya seperti yang kita tahu banyak anak-anak Departemen Informatika yang bekerja di waktu malam. Lalu admin-admin Laboratorium Arsitektur dan Jaringan Komputer sendiri dikenal paling loyal dan erat kekeluargaannya. Hal itu memang terasa ketika melihat para admin berkumpul, mereka benar-benar terlihat seperti keluarga
+                </p><br><br>
+                <header id="matkul">
+                    Mata Kuliah
+                </header>
+                <br>
+                <p class="text">
+                    Karena dasarnya memang sebuah laboratorium, maka Laboratorium Arsitektur dan Jaringan Komputer memiliki mata kuliah-mata kuliah yang dianunginya. Diantaranya :
                 </p>
             </section>
         </main>
