--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                                         <label  for="password"><b>Password</b></label>
                                     </div>
                                     <div class="right-tab">
-                                        <input type="password" name="password" placeholder="Enter Password">
+                                        <input type="password" name="password" placeholder="Enter Password" required>
                                     </div>
                                 </p>
                                 <p>
