menyelesaikan daftar matkul

--- a/landing_page.html
+++ b/landing_page.html
@@ -35,14 +35,44 @@
                 </p>
                 <p class="text">
                     Laboratorium Arsitektur dan Jaringan Komputer memiliki sekitar 17 sampai 18 admin aktif. Ada beberapa hal unik terkait dengan Laboratorium Arsitektur dan Jaringan Komputer, diantaranya laboratorium ini selalu berusaha untuk dibuka selama 24 jam, karena ya seperti yang kita tahu banyak anak-anak Departemen Informatika yang bekerja di waktu malam. Lalu admin-admin Laboratorium Arsitektur dan Jaringan Komputer sendiri dikenal paling loyal dan erat kekeluargaannya. Hal itu memang terasa ketika melihat para admin berkumpul, mereka benar-benar terlihat seperti keluarga
-                </p><br><br>
+                </p><br><br><br><br><br>
                 <header id="matkul">
                     Mata Kuliah
                 </header>
                 <br>
                 <p class="text">
                     Karena dasarnya memang sebuah laboratorium, maka Laboratorium Arsitektur dan Jaringan Komputer memiliki mata kuliah-mata kuliah yang dianunginya. Diantaranya :
-                </p>
+                </p><br>
+                <h2>&bull; Sistem Digital</h2>
+                <p class="text">
+                Mata kuliah ini menjelaskan berbagai macam sistem bilangan, menentukan fungsi Boolean dari suatu sistem digital dan melakukan penyederhanaan menggunakan beberapa metode. Mata kuliah ini juga menjelaskan fungsi dan karakteristik berbagai komponen sistem digital dan menjelaskan proses analisis dan perancangan sistem digital baik berupa rangkaian kombinasional maupun sekuensial.
+                </p><br>
+                <h2>&bull; Organisasi Komputer</h2>
+                <p class="text">
+                    Mata kuliah ini menjelaskan dasar kerja komputer dan komponen pembentuknya serta urutan untuk mengeksekusi suatu instruksi. Juga menjelaskan organisasi dan fungsi setiap komponen pembentuk computer serta menjelaskan konsep pipelining sebagai salah satu cara untuk pemrosesan secara paralel.
+                </p><br>
+                <h2>&bull; Sistem Operasi</h2>
+                <p class="text">
+                    Melalui mata kuliah ini, mahasiswa akan belajar mengenai konsep dasar-dasar sistem operasi dan mempraktekkannya. Perkuliahan dilakukan di kelas dan praktik dilakukan di kelas maupun di laboratorium. Mahasiswa akan belajar tentang konsep sistem operasi beserta manajemen dan strukturnya. Intinya bagaimana PC menjalankan perintah.
+                </p><br>
+                <h2>&bull; Jaringan Komputer</h2>
+                <p class="text">
+                    Mahasiswa belajar mengenai cara komunikasi antar komputer. Bagaimana data bisa terkirim dari satu komputer ke komputer lain berdasarkan konsep OSI Layer. Satu layer diatas sisop, basicnya sama seperti sisop, lebih banyak terjun ke jaringan.
+                </p><br>
+                <h2>&bull; Jaringan Nirkabel</h2>
+                <p class="text">
+                    Mirip Jaringan Komputer, tetapi lebih fokus ke permasalahan jaringan nirkabel.
+                </p><br>
+                <h2>&bull; Teknologi Antar Jaringan</h2>
+                <p class="text">
+                    Mirip jaringan komputer, tetapi lebih membahas subnating dan rooting.
+                </p><br>
+                <h2>&bull; Perancangan dan Keamanan Sistem dan Jaringan</h2>
+                <p class="text">
+                    Mahasiswa belajar berbagai hal lebih lanjut mengenai keamanan aplikasi, software berbahaya, analisis software berbahaya, dan keamanan jaringan
+                </p><br><br><br><br>
+                <header id="photo">Gallery</header>
+                <img src="" alt="">
             </section>
         </main>
     </div>
