--- a/landing_page.html
+++ b/landing_page.html
@@ -72,7 +72,11 @@
                     Mahasiswa belajar berbagai hal lebih lanjut mengenai keamanan aplikasi, software berbahaya, analisis software berbahaya, dan keamanan jaringan
                 </p><br><br><br><br>
                 <header id="photo">Gallery</header>
-                <img src="" alt="">
+                <br><br>
+                <img src="foto-AJK/1.jpg" alt="foto-1" class="img-ajk">
+                <img src="foto-AJK/2.jpg" alt="foto-2" class="img-ajk">
+                <img src="foto-AJK/3.jpg" alt="foto-3" class="img-ajk">
+                <img src="foto-AJK/4.jpg" alt="foto-4" class="img-ajk">
             </section>
         </main>
     </div>
